# chessboard-with-qt

./: CMakeLists.txt  README.md  chessboard.cpp
